--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,17 @@
+buildscript {
+    repositories {
+        mavenCentral()
+        maven { url "http://central.maven.org/maven2/"}
+        maven { url "http://maven.springframework.org/release" }
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+        maven { url "https://repo.spring.io/plugins-release" }
+    }
+    dependencies {
+        classpath("io.spring.gradle:propdeps-plugin:0.0.9.RELEASE")
+        classpath("org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.16")
+    }
+}
+
 plugins {
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE' apply false
 	id 'org.jetbrains.kotlin.jvm' version '1.3.72' apply false
